--- a/static/partials/stats.html
+++ b/static/partials/stats.html
@@ -1,3 +1,13 @@
+<div class="row m-2">
+    <div class='col-sm-12'>
+        <div class="dropdown show">
+            <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Game Type</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a ng-repeat="type in vm.types" class="dropdown-item" href="#" ng-click="vm.getStats(type)">{{ type }}</a>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class='col-sm-12'>
         <table class="table table-striped table-condensed">
