updated player display

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		<script src="/static/js/app.controller.js"></script>
 		<script src="/static/js/app.service.js"></script>
 		<script src="/static/js/app.filters.js"></script>
-		<!--<link rel="stylesheet" href="/static/css/bracket.css" />-->
+		<link rel="stylesheet" href="/static/css/app.css" />
     </head>
     <body ng-app="myApp">
 		<div ui-view=""></div>
