--- a/static/partials/player.html
+++ b/static/partials/player.html
@@ -165,10 +165,23 @@
 <div class="row mt-3">
     <div class='col-sm-4 offset-1'>
         <h5>Matches Played</h5>
-        <div class="mt-1" style="overflow: auto; width: 100%; height:500">
+        <div class="mt-1" style="overflow: auto; width: 100%; height:500px">
             <table class="table table-striped table-condensed">
+                <thead>
+                    <tr>
+                        <th>Date
+                            <i ng-hide="vm.sortType == '-date'" class="fas fa-angle-up" ng-click="vm.sortType = '-date'"></i>
+                            <i ng-show="vm.sortType == '-date'" class="fas fa-angle-down" ng-click="vm.sortType ='date'"></i>
+                        </th>
+                        <th>Place</th>
+                        <th>Kills</th>
+                        <th>Damage</th>
+                        <th>Distance</th>
+                        <th>Team</th>
+                    </tr>
+                </thead>
                 <tbody>
-                    <tr ng-repeat="match in vm.matches | orderBy:'-date'" ng-click="vm.rowNumber = match.index">
+                    <tr ng-repeat="match in vm.matches | orderBy:vm.sortType" ng-click="vm.rowNumber = match.index">
                         <td style="width: 82px; border-left: 4px solid #cacaca; padding-left: 12px;">
                             <div style="font-size: 12px;color: #696969;line-height: 1;">{{ match.gameMode | capitalize }}</div>
                             <div style="font-size: 12px;color: #696969;line-height: 1;">{{ match.date | date:"MM/dd/yyyy" }}</div>
