Fixed kill time

--- a/static/partials/player.html
+++ b/static/partials/player.html
@@ -353,7 +353,7 @@
                                             <button style="position: relative;background-color: transparent;color: #2b2e28;display: block;width: 100%;height: 50px;text-align: left;">
                                                 <span style="display: table;width: 100%;table-layout: fixed;">
                                                     <span style="width: 47px;text-align: center; display: table-cell;vertical-align: middle;">
-                                                        <span style="color: #696969;font-size: 12px;">{{ kill.time }}</span>
+                                                        <span style="color: #696969;font-size: 12px;">{{ kill.time | secondsToHHmmss }}</span>
                                                     </span>
                                                     <span style="display: table-cell;vertical-align: middle;width: auto;">
                                                         <span style="padding-left: 4px;display: block;">
