--- a/static/partials/player.html
+++ b/static/partials/player.html
@@ -217,7 +217,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="match in vm.matches | orderBy:vm.sortType" ng-click="vm.rowNumber = match.index">
+                                <tr ng-repeat="match in vm.matches | orderBy:vm.sortType" ng-click="vm.selectMatch(match.index)">
                                     <td style="width: 82px; border-left: 4px solid #cacaca; padding-left: 12px;">
                                         <div style="font-size: 12px;color: #696969;line-height: 1;">{{ match.gameMode | capitalize }}</div>
                                         <div style="font-size: 12px;color: #696969;line-height: 1;">{{ match.date | date:"MM/dd/yyyy" }}</div>
@@ -357,10 +357,10 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-5">
-                                        <div ng-hide="stats.kill_details == 0" style="margin-top: 0">
+                                        <div ng-hide="vm.matchKills[stats.name].kills.length === 0" style="margin-top: 0">
                                             <div style="height: 152px;overflow: auto;border: 1px solid #eaeaea;background-color: #eaeaea;">
                                                 <ul>
-                                                    <li style="background-color: #f6f6f6;" ng-repeat="kill in stats.kill_details | orderBy:'time'">
+                                                    <li style="background-color: #f6f6f6;" ng-repeat="kill in vm.matchKills[stats.name].kills | orderBy:'time'">
                                                         <button style="position: relative;background-color: transparent;color: #2b2e28;display: block;width: 100%;height: 50px;text-align: left;">
                                                             <span style="display: table;width: 100%;table-layout: fixed;">
                                                                 <span style="width: 47px;text-align: center; display: table-cell;vertical-align: middle;">
