--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.js"></script>
 		<script src="http://code.angularjs.org/1.5.3/angular-route.min.js"></script>
 		<script src="http://code.angularjs.org/1.5.3/angular-resource.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.17/angular-filter.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
 		<script src="/static/js/app.js"></script>
 		<script src="/static/js/app.controller.js"></script>
