--- a/static/partials/shot_chart.html
+++ b/static/partials/shot_chart.html
@@ -25,10 +25,10 @@
                                                 <span style="color: #696969;font-size: 12px;">{{ event.time | secondsToHHmmss }}</span>
                                                 <span style="display: inline-block;color: #dd8700;font-size: 12px;width: 50px">{{ event.weapon }}</span>
                                                 <span style="display: inline-block;margin-left: 5px;font-size: 12px;color: #9a9797;white-space: nowrap;width: 50px">
-                                                    {{ event.Damage | number: 2 }}
+                                                    {{ event.damage | number: 2 }}
                                                 </span>
                                                 <span style="display: inline-block;font-size: 12px;color: #9a9797;white-space: nowrap;width: 50px">
-                                                    {{ event.DamageReason | attack }}
+                                                    {{ event.damageReason | attack }}
                                                 </span>
                                             </span>
                                         </div>
