--- a/static/partials/player.html
+++ b/static/partials/player.html
@@ -1,4 +1,9 @@
-<div class="bottom-buffer mt-2 text-center" style="font-size: 32px; font-weight: 700;">{{ vm.playerName }}</div>
+<div class="bottom-buffer mt-2 text-center" style="font-size: 32px; font-weight: 700;">
+    <a class="dropdown-toggle" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ vm.playerName }}</a>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
+        <a ng-repeat="playerName in vm.playerNames" class="dropdown-item" href="/#/player/{{ playerName }}">{{ playerName }}</a>
+    </div>
+</div>
 <div class="row">
     <div class='col-sm-8 offset-2'>
         <div class="row">
