--- a/static/partials/player.html
+++ b/static/partials/player.html
@@ -1,7 +1,7 @@
 <div class="bottom-buffer mt-2 text-center" style="font-size: 32px; font-weight: 700;">
     <a class="dropdown-toggle" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ vm.playerName }}</a>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
-        <a ng-repeat="playerName in vm.playerNames" class="dropdown-item" href="/#/player/{{ playerName }}">{{ playerName }}</a>
+        <a ng-repeat="playerName in vm.playerNames" class="dropdown-item" ng-href="/#!/player/{{ playerName }}">{{ playerName }}</a>
     </div>
 </div>
 <div class="row">
@@ -175,7 +175,7 @@
         </div>
         <div class="row mt-2">
             <div ng-repeat="map in vm.maps" class="col-sm-12">
-                <input type="checkbox" ng-model="map.selected" ng-click="vm.getStats(vm.selectedLimit)">
+                <input type="checkbox" ng-model="map.selected" ng-change="vm.getStats(vm.selectedLimit)">
                 <label>{{ map.name }}</label>
             </div>
         </div>
@@ -268,7 +268,11 @@
                 </div>
                 <div class='col-sm-7'>
                     <div ng-show="vm.rowNumber != -1">
-                        <div class="bottom-buffer" style="padding-left: 6px;"><a href="#/chart/{{ vm.matches[vm.rowNumber].key }}">{{ vm.matches[vm.rowNumber].date | date:"MM/dd/yyyy h:mma" }}</a></div>
+                        <div class="bottom-buffer" style="padding-left: 6px;">
+                            {{ vm.matches[vm.rowNumber].date | date:"MM/dd/yyyy h:mma" }}
+                            <a href="#!/chart/{{ vm.matches[vm.rowNumber].key }}">Damage</a>
+                            <a href="https://pubg-replay.com/match/xbox/na/{{ vm.matches[vm.rowNumber].key }}?highlight={{ vm.playerName }}" target="_blank">Replay</a>
+                        </div>
                         <table class="table table-striped table-bordered">
                             <tr ng-repeat="(playerName, stats) in vm.matches[vm.rowNumber].stats"><td>
                                 <div class="row mb-2">
